# imgui-cgal-igl

./: CMakeLists.txt  example.cpp  gradient.cpp
Viewer/: CMakeLists.txt  my_file_dialog_open.h  timestamp.h  viewer.cpp  viewer.h
Viewer/imgui/: CGALPlugin.h  KeyHandler.cpp  KeyHandler.h  MeshMenu.h
cmake/: libigl.cmake  libigl_data_path.cmake
